@@ -13,7 +13,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +26,7 @@ public class CategoryServiceImpl implements CategoryService {
         return categoryRepository.findAllOrderByNameAscAndOthersLast()
                 .stream()
                 .map(categoryMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
