@@ -13,7 +13,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -37,7 +36,7 @@ public class OrderItemServiceImpl implements OrderItemService {
         return orderItemRepository.findAllByOrderId(orderId)
                 .stream()
                 .map(orderItemMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
